<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Daftar">

    <TextView
        android:id="@+id/textVie3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.105"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/edaftar"
        android:textSize="15pt"
        />

    <EditText
        android:id="@+id/ednama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintTop_toBottomOf="@id/textVie3"
        android:hint="@string/enama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edalamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.068"
        app:layout_constraintTop_toBottomOf="@id/ednama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:hint="@string/ealamat"
        android:inputType="textMultiLine|text" />

    <EditText
        android:id="@+id/EdEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintVertical_bias="0.076"
        app:layout_constraintTop_toBottomOf="@id/edalamat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/eemail" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintVertical_bias="0.112"
        app:layout_constraintTop_toBottomOf="@id/EdEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/epass" />

    <EditText
        android:id="@+id/edrepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintVertical_bias="0.113"
        app:layout_constraintTop_toBottomOf="@id/edPass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/erepass" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Simpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintVertical_bias="0.404"
        app:layout_constraintTop_toBottomOf="@id/edrepass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save" />

</androidx.constraintlayout.widget.ConstraintLayout>